--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -68,6 +68,7 @@
         border: none;
         border: 10px;
         padding: 0;
+        background-color: $color-main;
 
         @include tablet {
             border: 1px solid $color-border;
